Fixes dual scrollbars in small viewport

--- a/src/plugins/dashboard/public/dashboard_app/_dashboard_app.scss
+++ b/src/plugins/dashboard/public/dashboard_app/_dashboard_app.scss
@@ -1,7 +1,7 @@
 @import 'src/core/public/mixins';
 
 .dshAppWrapper {
-  @include euiBreakpoint('m', 'l', 'xl') {
+  @include euiBreakpoint('xs', 's', 'm', 'l', 'xl') {
     @include kibanaFullBodyHeight();
   }
   display: flex;
